--- a/src/main/webapp/resources/css/escapeFinal.css
+++ b/src/main/webapp/resources/css/escapeFinal.css
@@ -1319,7 +1319,7 @@ footer .inner {
 .UI_title {
     font-size: 40px;
     text-align: center;
-    margin: 30px 0 100px;
+    margin: 20px 0 90px;
 }
 .user_info_text {
     width: 100%;
@@ -1736,4 +1736,75 @@ footer .inner {
     padding: 7px;
     border-radius: 10px;
     font-size: 14px;
+}
+
+
+
+/* 로그인 */
+.logIn_wrap {
+    width: 940px;
+    display: flex;
+    justify-content: center;
+    background-color: #6998ab73;
+    margin: 30px auto;
+    border-radius: 20px;
+}
+.logIn_inner {
+    width: 900px;
+    border-radius: 20px;
+    overflow: hidden;
+    margin: 20px 0;
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+    position: relative;
+    padding: 50px;
+    box-sizing: border-box;
+    background-color: #fff;
+}
+.user_login_text {
+    padding: 0 100px;
+    box-sizing: border-box;
+    margin-bottom: 100px;
+}
+.login_btns {
+    display: flex;
+    justify-content: center;
+}
+.login_btn {
+    height: 35px;
+    border-radius: 10px;
+    font-family: 'NanumSquareNeo';
+    background-color: transparent;
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+    cursor: pointer;
+    padding: 15px 15px 0;
+}
+.login_btn:first-child {
+    margin-right: 15px;
+    color: #F1F6F9;
+    background-color: #6998AB;
+    font-weight: bold;
+}
+
+
+
+/* 미디어쿼리 */
+@media screen and (max-width: 767px) {
+
+    .wrap {
+        width: 450px;
+    }
+
+    header .inner,
+    .reser_recom .inner,
+    .this_month_theme .inner,
+    footer .inner {
+        width: 100%;
+    }
+
+    header {
+        width: 100%;
+        height: 60px;
+    }
+
+
 }
