--- a/src/main/webapp/resources/css/escapeMaintain.css
+++ b/src/main/webapp/resources/css/escapeMaintain.css
@@ -160,10 +160,12 @@ body, html {height: 100%;}
     width: 100%;
     height: 40px;
     font-size: 14px;
+    border-bottom: 1px solid #000;
 }
 .did_theme_table tbody {
     width: 100%;
     height: 50px;
+    border-bottom: 1px solid #000;
 }
 .did_theme_table tbody tr td:not(:nth-of-type(3)) {
     text-align: center;
@@ -183,6 +185,9 @@ body, html {height: 100%;}
     border-radius: 10px;
     font-family: 'NanumSquareNeoBold';
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .add_btn:hover {
     color: #F1F6F9;
@@ -203,4 +208,39 @@ body, html {height: 100%;}
 	background-color: #B1D0E0;
 	border-radius: 10px;
 	cursor: pointer;
+}
+.formBtn {
+	display: flex;
+	position: absolute;
+	right: 0;
+	bottom: 15px;
+	width: 180px;
+	height: 40px;
+}
+.saveBtn, .delBtn, .makeBtn {
+	width: 50px;
+    height: 40px;
+    background-color: #eee;
+    border: 0;
+    border-radius: 10px;
+    font-family: 'NanumSquareNeoBold';
+    cursor: pointer;
+    margin-right: 10px;
+}
+.saveBtn:hover, .delBtn:hover, .makeBtn:hover {
+	color: #F1F6F9;
+    background-color: #6998AB;
+}
+
+Form[name=subForm] input {
+	width: 100px;
+	height: 30px;
+	outline: 1px solid #aaa;
+	padding: 10px;
+	box-sizing: border-box;
+	margin-right: 15px;
+	border-radius: 5px;
+}
+.indexAdmViewTbody tr {
+	height: 35px;
 }
