--- a/src/main/webapp/resources/css/escapeMaintain.css
+++ b/src/main/webapp/resources/css/escapeMaintain.css
@@ -98,7 +98,7 @@ body, html {height: 100%;}
 /* 체험한 테마 */
 .didtheme {
     width: 100%;
-    height: 100%;
+    height: 90%;
     box-sizing: border-box;
     margin: auto;
 }
@@ -288,4 +288,5 @@ select[name=paging] {
 }
 .paging ul li:hover {
 	background-color: #B1D0E0;
+	color: #fff;
 }
