--- a/src/main/webapp/resources/css/portfolio.css
+++ b/src/main/webapp/resources/css/portfolio.css
@@ -23,7 +23,7 @@ body, html {height: 100%; font-family: 'Noto Sans KR', sans-serif;}
 .bgimg {
     width: 100%;
     height: 100%;
-    background-image: url(../img/bg_03.jpg);
+    /* background-image: url(../img/bg_03.jpg); */
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -74,12 +74,12 @@ body, html {height: 100%; font-family: 'Noto Sans KR', sans-serif;}
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
 .left_btn {
-    width: 49px;
+    width: 48px;
     height: 49px;
     background-color: transparent;
     font-size: 21px;
 }
-.left_btn:hover {
+.lnb_hover:hover {
     background-color: rgba(230,230,230,.9);
 }
 .left_btn img {
@@ -100,6 +100,50 @@ body, html {height: 100%; font-family: 'Noto Sans KR', sans-serif;}
 }
 .search_btn {
     transform: rotatey(180deg);
+}
+.right_lnb {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: flex;
+}
+.timeAndDate {
+    width: 73px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 12px;
+    padding: 5px 0;
+    box-sizing: border-box;
+    cursor: context-menu;
+}
+.notice_btn {
+    width: 41px;
+    height: 50px;
+    background-color: transparent;
+    font-size: 21px;
+    margin-right: 12px;
+}
+.notice_btn img {
+    width: 40%;
+    background-color: transparent;
+}
+.right_btn {
+    width: 25px;
+    height: 49px;
+    background-color: transparent;
+    font-size: 21px;
+}
+.right_btn img {
+    width: 15px;
+    height: 13px;
+    object-fit: cover;
+    background-color: transparent;
+}
+.right_icons {
+    margin-right: 10px;
 }
 
 
@@ -152,7 +196,4 @@ body, html {height: 100%; font-family: 'Noto Sans KR', sans-serif;}
     color: #fff;
     font-weight: bold;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
