--- a/src/main/webapp/resources/css/escapeMaintain.css
+++ b/src/main/webapp/resources/css/escapeMaintain.css
@@ -293,3 +293,57 @@ select[name=paging] {
 }
 
 
+/* indexAdmView */
+.didtheme_full {
+	width: 500px;
+	height: 500px;
+	background-color: #ccc;
+	border-radius: 10px;
+}
+.logInInput {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 80px 0;
+    box-sizing: border-box;
+}
+.IdInput,
+.PWInput {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+}
+.PWInput {
+    margin: 10px 0 60px 0;
+}
+.logInInput label {
+    width: 70px;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+}
+.logInInput input {
+    width: 200px;
+    height: 30px;
+    border-bottom: 1px solid #aaa;
+    outline: none;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.logInBtn {
+    color: #fff;
+    letter-spacing: -1px;
+    font-weight: 100;
+    width: 220px;
+    height: 40px;
+    background-color: #B1D0E0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 14px;
+}
