--- a/src/main/webapp/resources/css/escapeFinal.css
+++ b/src/main/webapp/resources/css/escapeFinal.css
@@ -998,6 +998,21 @@ footer .inner {
     height: 30px;
     border-radius: 50%;
     position: absolute;
+    right: 60px;
+    top: 20px;
+    background-color: #6998AB;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 0 5px rgba(0,0,0,.2);
+}
+.logout_btn {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    position: absolute;
     right: 20px;
     top: 20px;
     background-color: #6998AB;
@@ -1008,6 +1023,7 @@ footer .inner {
     cursor: pointer;
     box-shadow: 0 0 5px rgba(0,0,0,.2);
 }
+.logout_btn:hover,
 .setting_mypage:hover {
     color: #212A3E;
 }
@@ -1776,13 +1792,20 @@ footer .inner {
     background-color: transparent;
     box-shadow: 0 0 10px rgba(0,0,0,.2);
     cursor: pointer;
-    padding: 15px 15px 0;
-}
-.login_btn:first-child {
+    padding: 10px 15px;
     margin-right: 15px;
     color: #F1F6F9;
     background-color: #6998AB;
     font-weight: bold;
+}
+.join_btn {
+	height: 35px;
+    border-radius: 10px;
+    font-family: 'NanumSquareNeo';
+    background-color: transparent;
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+    cursor: pointer;
+    padding: 15px 15px 0;
 }
 
 
